added RetryEntity management for listStream and DeleteStream
