# src/main/java/it/pagopa/pn/stream/middleware/dao/dynamo/mapper/DtoToEntityStreamMapper.java
@@ -2,7 +2,7 @@ package it.pagopa.pn.stream.middleware.dao.dynamo.mapper;
 
 import it.pagopa.pn.stream.config.PnStreamConfigs;
 
-import it.pagopa.pn.stream.generated.openapi.server.v1.dto.StreamCreationRequestV26;
+import it.pagopa.pn.stream.generated.openapi.server.v1.dto.StreamCreationRequestV27;
 import it.pagopa.pn.stream.generated.openapi.server.v1.dto.StreamRequestV26;
 import it.pagopa.pn.stream.middleware.dao.dynamo.entity.StreamEntity;
 import java.util.Set;
@@ -18,7 +18,7 @@ public class DtoToEntityStreamMapper {
         currentVersion = pnStreamConfigs.getCurrentVersion();
     }
 
-    public static StreamEntity dtoToEntity(String paId, String streamId, String version, StreamCreationRequestV26 dto) {
+    public static StreamEntity dtoToEntity(String paId, String streamId, String version, StreamCreationRequestV27 dto) {
         StreamEntity streamEntity = new StreamEntity(paId, streamId);
         streamEntity.setEventType(dto.getEventType().getValue());
         streamEntity.setTitle(dto.getTitle());
@@ -33,9 +33,9 @@ public class DtoToEntityStreamMapper {
     }
 
     public static StreamEntity dtoToEntity(String paId, String streamId, String version, StreamRequestV26 dto) {
-        StreamCreationRequestV26 creationRequestv23 = new StreamCreationRequestV26();
+        StreamCreationRequestV27 creationRequestv23 = new StreamCreationRequestV27();
         BeanUtils.copyProperties(dto, creationRequestv23);
-        creationRequestv23.setEventType(StreamCreationRequestV26.EventTypeEnum.fromValue(dto.getEventType().getValue()));
+        creationRequestv23.setEventType(StreamCreationRequestV27.EventTypeEnum.fromValue(dto.getEventType().getValue()));
         return dtoToEntity(paId, streamId, version, creationRequestv23);
     }
 }
